# reactor-agent

./: .flake8  LICENSE  LOGGING.md  MANIFEST.in  README.md  basic_usage_traces.json  pyproject.toml  requirements.txt  setup.py
examples/: basic_example.py  basic_usage.py  tool_example.py  trace_demo.py
examples/tools/: tavily_tool.py
reactor/: __init__.py  agent.py  logging_config.py  trace.py
reactor/tools/: __init__.py  fmp_tool.py  internet_tool.py  tavily_tool.py  tool.py  web_doc_tool.py
tests/: __init__.py  test_agent.py  test_agent_trace_integration.py  test_trace.py
